Implemented the ability to get and view candle sticks for one year.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Go Modules file
+go.sum
+
+# godotenv file
+.env
