separate domain, infra packages.

--- a/example.env
+++ b/example.env
@@ -1,2 +1,9 @@
 BITBANK_API_KEY=YOUR_API_KEY
 BITBANK_SECRET=YOUR_SECRET
+
+TRADE_PAIR=btc_jpy
+USE_CANDLE_TYPE=1day
+
+SHORT_OHLCV_LENGTH=5
+MIDDLE_OHLCV_LENGTH=25
+LONG_OHLCV_LENGTH=75
