add INTERVAL_TIME parameter

--- a/example.env
+++ b/example.env
@@ -4,6 +4,9 @@ BITBANK_SECRET=YOUR_SECRET
 TRADE_PAIR=btc_jpy
 USE_CANDLE_TYPE=1day
 
+INTERVAL_TIME=86400
+INTERVAL_TIME=10
+
 SHORT_OHLCV_LENGTH=5
 MIDDLE_OHLCV_LENGTH=25
 LONG_OHLCV_LENGTH=75
